// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateShadowNodeCpp can generate fixture ARRAY_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ArrayPropsNativeComponentComponentName[] = \\"ArrayPropsNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ArrayPropsNativeComponentComponentName[] = \\"ArrayPropsNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/BOOLEAN_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char BooleanPropNativeComponentComponentName[] = \\"BooleanPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture COLOR_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/COLOR_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ColorPropNativeComponentComponentName[] = \\"ColorPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture COMMANDS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/COMMANDS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char CommandNativeComponentComponentName[] = \\"CommandNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/COMMANDS_AND_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char CommandNativeComponentComponentName[] = \\"CommandNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture DIMENSION_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/DIMENSION_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char DimensionPropNativeComponentComponentName[] = \\"DimensionPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/DOUBLE_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char DoublePropNativeComponentComponentName[] = \\"DoublePropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char EventsNestedObjectNativeComponentComponentName[] = \\"EventsNestedObjectNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture EVENT_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/EVENT_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char EventsNativeComponentComponentName[] = \\"EventsNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/ShadowNodes.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ExcludedAndroidComponentComponentName[] = \\"ExcludedAndroidComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID_IOS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ExcludedAndroidIosComponentComponentName[] = \\"ExcludedAndroidIosComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ExcludedIosComponentComponentName[] = \\"ExcludedIosComponent\\";
extern const char MultiFileIncludedNativeComponentComponentName[] = \\"MultiFileIncludedNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture FLOAT_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/FLOAT_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char FloatPropNativeComponentComponentName[] = \\"FloatPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture IMAGE_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/IMAGE_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ImagePropNativeComponentComponentName[] = \\"ImagePropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture INSETS_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/INSETS_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char InsetsPropNativeComponentComponentName[] = \\"InsetsPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/INT32_ENUM_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char Int32EnumPropsNativeComponentComponentName[] = \\"Int32EnumPropsNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture INTEGER_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/INTEGER_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char IntegerPropNativeComponentComponentName[] = \\"IntegerPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/INTERFACE_ONLY/ShadowNodes.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/MULTI_NATIVE_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ImageColorPropNativeComponentComponentName[] = \\"ImageColorPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/NO_PROPS_NO_EVENTS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char NoPropsNoEventsComponentComponentName[] = \\"NoPropsNoEventsComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture OBJECT_PROPS 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/OBJECT_PROPS/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char ObjectPropsComponentName[] = \\"ObjectProps\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture POINT_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/POINT_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char PointPropNativeComponentComponentName[] = \\"PointPropNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/STRING_ENUM_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char StringEnumPropsNativeComponentComponentName[] = \\"StringEnumPropsNativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture STRING_PROP 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/STRING_PROP/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char StringPropComponentComponentName[] = \\"StringPropComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char MultiFile1NativeComponentComponentName[] = \\"MultiFile1NativeComponent\\";
extern const char MultiFile2NativeComponentComponentName[] = \\"MultiFile2NativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeCpp can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "ShadowNodes.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/ShadowNodes.h>

namespace facebook {
namespace react {

extern const char MultiComponent1NativeComponentComponentName[] = \\"MultiComponent1NativeComponent\\";
extern const char MultiComponent2NativeComponentComponentName[] = \\"MultiComponent2NativeComponent\\";

} // namespace react
} // namespace facebook
",
}
`;
